--- a/index.html
+++ b/index.html
@@ -1,4 +1,39 @@
-scrap-kaka/
-  index.html
-  style.css
-  script.js
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Scrap Kaka</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>♻️ Scrap Kaka</h1>
+    <p>Sell your scrap online – get real-time prices</p>
+  </header>
+
+  <section id="prices">
+    <h2>📊 Live Scrap Prices</h2>
+    <ul id="price-list">
+      <!-- Prices will load here -->
+    </ul>
+  </section>
+
+  <section id="pickup">
+    <h2>🚚 Request Scrap Pickup</h2>
+    <form id="pickup-form">
+      <input type="text" placeholder="Your Name" required>
+      <input type="text" placeholder="Your Address" required>
+      <input type="tel" placeholder="Phone Number" required>
+      <button type="submit">Request Pickup</button>
+    </form>
+  </section>
+
+  <footer>
+    <p>© 2025 Scrap Kaka | Made with ♻️</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
+
